# spice-audio-tools

./: .gitignore  LICENSE.txt  Makefile  README  pyproject.toml  setup.py  spicetowav.py  wavtospice.py
examples/: lowpass.cir
spice2wav/: spice2wav.py  wav2spice.py
spiceaudiotools/: __init__.py  spicetowav.py  wavtospice.py
